--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">短信分发</string>
+    <string name="phone_text">手机号</string>
+    <string name="listen_text">监听短信</string>
+    <string name="server_url_text">转发地址</string>
 </resources>
