--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">短信分发</string>
+    <string name="app_name">天华联审平台验证码转发助手</string>
     <string name="phone_text">手机号</string>
     <string name="listen_text">监听短信</string>
     <string name="server_url_text">转发地址</string>
+    <string name="notes">注意事项：\n1. 应用功能需要获取手机短信的权限，请确保开启了权限\n2. 部分手机短信权限分为普通短信和通知类短信，请确保全部允许\n操作说明：\n1. 输入当前手机的号码 \n2. 输入接收短信的地址\n3. 打开监听短信开关</string>
 </resources>
